<resources>
    <string name="app_name">Exercise 1</string>
    <string name="bLogin">LOGIN</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="belum_terdaftar">Belum Terdaftar?</string>
    <string name="pendaftaran">Pendaftaran</string>
    <string name="masukkan_nama">Masukkan Nama</string>
    <string name="masukkan_alamat">Masukkan Alamat</string>
    <string name="jenis_kelamin">Jenis Kelamin:</string>
    <string name="laki_laki">Laki - Laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="agama">Agama :</string>
    <string name="islam">Islam</string>
    <string name="katolik">Katolik</string>
    <string name="kristen">Kristen</string>
    <string name="hindu">Hindu</string>
    <string name="budha">Budha</string>
    <string name="konghucu">Konghucu</string>
    <string name="masukkan_email_daftar">Masukkan Email</string>
    <string name="masukkan_password_daftar">Masukkan Password</string>
    <string name="masukkan_kembali_password_daftar">Masukkan Kembali Password</string>
    <string name="batal">Batal</string>
    <string name="daftar">Daftar</string>
    <string name="penganut_kepercayaan">Penganut Kepercayaan</string>
    <string name="data_kontak">Data Kontak</string>
    <string name="nama">Nama</string>
    <string name="notel">Nomor Telepon</string>
    <string name="detail_kontak">Detail Kontak</string>
    <string name="nama_item">Nama Item</string>
    <string name="lihatdata">Lihat Data</string>
    <string name="editdata">Edit Data</string>
</resources>